--- a/match.html
+++ b/match.html
@@ -13,17 +13,16 @@
 </head>
 
 <body>
-    <header></header>
-    <main>
+    <header>
         <!-- banner section start -->
         <section class="banner-section container">
             <div class="banner-content">
                 <div class="banner-text">
                     <h1>The <span data-text="Greatest" id="text-animate">Greatest</span> show on the earth</h1>
-                    <p title="Contrary to popular belief, Lorem Ipsum is not simply
-                    random text. It has roots in a piece of classical Latin literature from 45 BC, making it over">
-                        Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a
-                        piece of classical Latin literature from 45 BC, making over 2000 years old.</p>
+                    <p
+                        title="Qatar, the hosts of the upcoming 2022 World Cup, are all set to host the sport's biggest event. In fact, the World Cup is considered amongs the greatest sporting spectacle on earth.">
+                        Qatar, the hosts of the upcoming 2022 World Cup, are all set to host the sport's biggest event.
+                        In fact, the World Cup is considered amongs the greatest sporting spectacle on earth..</p>
                     <a class="link-btn" target="_blank" href="">Watch Live <span><i
                                 class="fa-solid fa-angle-right"></i></span></a>
                 </div>
@@ -33,7 +32,9 @@
             </div>
         </section>
         <!-- banner section end -->
+    </header>
 
+    <main>
         <!-- blog section start -->
         <article>
             <section class="blog-section container">
