website tittle edited

--- a/blog.html
+++ b/blog.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>World Cup Mania/title>
-        <!-- font awesome -->
-        <script src="https://kit.fontawesome.com/cb1f6059b6.js" crossorigin="anonymous"></script>
-        <!-- stylesheet -->
-        <link rel="stylesheet" href="./styles/blog-style.css">
+    <title>World Cup Mania</title>
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/cb1f6059b6.js" crossorigin="anonymous"></script>
+    <!-- stylesheet -->
+    <link rel="stylesheet" href="./styles/blog-style.css">
 </head>
 
 <body>
